# RepoIndexAPI

./: .gitignore  README.md  go.mod  go.sum  main.go  main.py  makefile  pyproject.toml  repositories.csv
api/: repositories.go  routes.go  service.go  tasks.go
cmd/app/: main.go
config/: bigquery_adapter.go  config.go  database.go  models.go  schemas.go
docker/build_dev/: dockerfile
requirements/: base.txt
src/saucer_api/: api.py  models.py
