[tool.poetry]
name = "SaucerAPI"
version = "0.1.0"
description = "The API for OpenSaucer."
authors = [
    "ArturOle"
]
license = "GPL-3.0"
readme = "README.md"
keywords = [""]
packages = [{include = "saucer_api", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
uvicorn = "^0.31.0"
python-multipart = "^0.0.12"
aiofiles = "^24.1.0"
slowapi = "^0.1.9"
httpx = "^0.28.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pytest-mock =  "^3.14.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
